Swing file cmp by exercise 16.1

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /Experiments/Tuttorial/Swing/JCheckBoxSwing/build/
 /Experiments/Tuttorial/Swing/JListSwing/nbproject/private/
 /Experiments/Tuttorial/Swing/JListSwing/build/
+/Experiments/Tuttorial/Swing/SwingCmp/nbproject/private/
+/Experiments/Tuttorial/Swing/SwingCmp/build/
