JavaFx Label example form Shildt book

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@
 /Experiments/Tuttorial/Swing/SwingApp/build/
 /Experiments/Tuttorial/Swing/TrySimpleFx/nbproject/private/
 /Experiments/Tuttorial/Swing/TrySimpleFx/build/
+/Experiments/Tuttorial/Fx/FxLabel/nbproject/private/
+/Experiments/Tuttorial/Fx/FxLabel/build/
