JavaFx Button example from Shildt book

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@
 /Experiments/Tuttorial/Swing/TrySimpleFx/build/
 /Experiments/Tuttorial/Fx/FxLabel/nbproject/private/
 /Experiments/Tuttorial/Fx/FxLabel/build/
+/Experiments/Tuttorial/Fx/FxBtn/nbproject/private/
+/Experiments/Tuttorial/Fx/FxBtn/build/
