JavaFx CheckBox example from Shildt book

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@
 /Experiments/Tuttorial/Fx/FxLabel/build/
 /Experiments/Tuttorial/Fx/FxBtn/nbproject/private/
 /Experiments/Tuttorial/Fx/FxBtn/build/
+/Experiments/Tuttorial/Fx/FxCheckBox/nbproject/private/
+/Experiments/Tuttorial/Fx/FxCheckBox/build/
