--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@
 /Experiments/Tuttorial/Fx/FxBtn/build/
 /Experiments/Tuttorial/Fx/FxCheckBox/nbproject/private/
 /Experiments/Tuttorial/Fx/FxCheckBox/build/
+/Experiments/Tuttorial/Fx/FxListWiew/nbproject/private/
+/Experiments/Tuttorial/Fx/FxListWiew/build/
