Java FX TextField example from Shildt book

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@
 /Experiments/Tuttorial/Fx/FxCheckBox/build/
 /Experiments/Tuttorial/Fx/FxListWiew/nbproject/private/
 /Experiments/Tuttorial/Fx/FxListWiew/build/
+/Experiments/Tuttorial/Fx/FxtextField/nbproject/private/
+/Experiments/Tuttorial/Fx/FxtextField/build/
