JavaFx Effects example from Shild book

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@
 /Experiments/Tuttorial/Fx/FxListWiew/build/
 /Experiments/Tuttorial/Fx/FxtextField/nbproject/private/
 /Experiments/Tuttorial/Fx/FxtextField/build/
+/Experiments/Tuttorial/Fx/FxEffects/nbproject/private/
+/Experiments/Tuttorial/Fx/FxEffects/build/
