first projects in java

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,11 @@
 /Experiments/Tuttorial/Fx/FxtextField/build/
 /Experiments/Tuttorial/Fx/FxEffects/nbproject/private/
 /Experiments/Tuttorial/Fx/FxEffects/build/
+/Experiments/FX/jCount/nbproject/private/
+/Experiments/FX/jCount/build/
+/Experiments/FX/jCount/dist/
+/Projects/PassThrough/PassThough/nbproject/private/
+/Projects/Util/PassThrough/PassThrough/nbproject/private/
+/Projects/Util/Dbg/Dbg/nbproject/private/
+/Projects/Util/Dbg/Dbg/build/
+/Experiments/Tuttorial/Fx/FxLabel/dist/
